--- a/www/index.html
+++ b/www/index.html
@@ -518,9 +518,9 @@
 						<p><a href="#">Elektrogeräte Reparatur</a></p>	
 					</div>
 					<div class="col-md-6 mobile-hidden">
-						<p><a href="#"><img src="image/footer/icon-phone.png">020 3026 6497 </a></p>
-						<p class="p-s"><a href="#"><img src="image/footer/icon-mail.png">info@electric-24.co.uk</a></p>
-						<p class="p-s"><a href="#"><img src="image/footer/icon-geo.png">Genslerstraße 117, 10787 Berlin</a></p>
+						<p><img src="image/footer/icon-phone.png"><a href="#">  020 3026 6497 </a></p>
+						<p class="p-s"><img src="image/footer/icon-mail.png"><a href="#">  info@electric-24.co.uk</a></p>
+						<p class="p-s"><img src="image/footer/icon-geo.png"><a href="#">  Genslerstraße 117, 10787 Berlin</a></p>
 					</div>
 				</div>
 				<div class="foot-bottom">
