--- a/www/index.html
+++ b/www/index.html
@@ -12,8 +12,7 @@
 		<link rel="shortcut icon" href="/image/favicon.ico" type="image/x-icon">
   		<script src="js/accordion.js"></script>
 		<script defer src="js/chief-slider.js"></script>
-		<script src="js/bootstrap.min.js"></script>
-		<script src="js/script.js"></script>
+
 		<script>
 			document.addEventListener('DOMContentLoaded', () => {
 			  	new ChiefSlider('.slider-1', {
@@ -529,8 +528,8 @@
 			</footer>
 		</div>
 		
-		<!-- jQuery Version 1.11.0 -->
-		<script src="https://raw.githubusercontent.com/IronSummitMedia/startbootstrap/gh-pages/templates/agency/js/jquery-1.11.0.js"></script>
+		<!-- jQuery -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
 		<!-- Bootstrap Core JavaScript -->
 		<script src="https://raw.githubusercontent.com/IronSummitMedia/startbootstrap/gh-pages/templates/agency/js/bootstrap.min.js"></script>
@@ -543,5 +542,7 @@
 		<!-- Contact Form JavaScript -->
 		<script src="https://raw.githubusercontent.com/IronSummitMedia/startbootstrap/gh-pages/templates/agency/js/jqBootstrapValidation.js"></script>
 		<script src="https://raw.githubusercontent.com/IronSummitMedia/startbootstrap/gh-pages/templates/agency/js/contact_me.js"></script>
+		<script src="js/bootstrap.min.js"></script>
+		<script src="js/script.js"></script>
 	</body>
 </html>
